[metadata]
name = VWS Auth Tools
description = Authentication and authorization tools for interacting with the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia vws
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/VWS-Python/vws-auth-tools
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:
python_requires = >=3.10

[options.packages.find]
where=src

[options.package_data]
vws_auth_tools =
    py.typed
